--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,10 @@
     <string name="btn_comprobar">Comprobar</string>
     <string name="tv1">¿De qué país es la bandera?</string>
     <string name="tv_respuesta">respuesta</string>
+    <string name="tv_respuesta1">respuesta</string>
+    <string name="tv_respuesta2">respuesta</string>
     <string name="tv_index">indice</string>
+    <string name="img_aleatoria">portada</string>
+    <string name="txt_puntos">Puntos:</string>
+    <string name="tv_puntos">0</string>
 </resources>
